added a new module type: I/O filter. Lets the user replace the input and output streams used by XSS.
also made some modifications et.c. to support minmejl


git-svn-id: file:///Users/rasmus/Documents/svn/xss@117 1f0bd34c-84f6-8345-977f-33d266def4f8

--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="iso-8859-1"?>
 
 <!--
   Ant build spec for XSS and related code.
@@ -9,7 +9,7 @@
 <project name="xss" default="server" basedir=".">
   <target name="init">
     <tstamp/>
-    <property name="project.version" value="0.9"/>
+    <property name="project.version" value="0.9.1"/>
     <property name="project.name" value="XSS"/>
     <property name="project.dir"  value="${basedir}"/>
     <property name="project.src"  value="${basedir}/src"/>
